TinyMCE 4.0.1~core6

	* DAMN CLRF!
	* Completely overhaul the form styling and templates on Core.
	-- Charlie Powell <charlie@eval.bz>  Wed, 21 Jan 2015 00:04:18 -0500

TinyMCE 4.0.1~core5

	* Bump copyright date to 2014.
	-- Charlie Powell <charlie@eval.bz>  Thu, 02 Jan 2014 11:24:47 -0500

TinyMCE 4.0.1~core4

	* Update the copyright datestamp to the current year.
	-- Charlie Powell <charlie@eval.bz>  Thu, 07 Nov 2013 15:01:57 -0500

TinyMCE 4.0.1~core3

	* Make use of the namespace versions of View instead of static.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:49:15 -0400

TinyMCE 4.0.1~core2

	* Moved the navigator functionality into the Media Manager component.
	-- Charlie Powell <charlie@eval.bz>  Sat, 20 Jul 2013 04:45:27 -0400

TinyMCE 4.0.1~core1

	* [Bug] Fixed Bug #254 - TinyMCE File browser needs to be alphabetical
	* [Bug] Fixes in the navigator to ensure that files are prepended with the correct directory name.
	  This was causing issues from changing to the top directory "" or ".", and the system not recognizing
	  that path translated to public/tinymce.
	* Minor style tweaks to the navigator icon and list views.
	* Updated TinyMCE to 4.0.1 from upstream.
	-- Charlie Powell <charlie@eval.bz>  Mon, 08 Jul 2013 12:01:11 -0400

TinyMCE 4.0.0b3~core2

	* [Bug] Set the pop-up pages to be not recorded in page navigation.
	* [Bug] Fixed file names that are uploaded to a directory where the script may not append the
	  directory with a trailing slash.
	* [Feature] Added a new stylesheet that can be overwrote; tinymce/content.css.  This provides the
	  ability for themes to specify the site styles to be used inside of editors.
	* Rearranged the stylesheets a little
	-- Charlie Powell <charlie@eval.bz>  Sun, 09 Jun 2013 21:37:09 -0400

TinyMCE 4.0.0b3~core1

	* [Feature] New UI
	* [Feature] New page for managing the public files
	* [Feature] New config options for TinyMCE
	* [Feature] New image selector popup